2010-03-16  pt  <ptptptptptpt@163.com>
    V1.1 清理不必要的文件；修正“设定某些颜色时，菜单被选中项会闪烁”的问题。



2010-03-09  pt  <ptptptptptpt@163.com>
    V1.0
    getkey(): 去掉 hlt 指令；
    checkkey(): 改变 hlt 指令的位置。



2010-03-09  pt  <ptptptptptpt@163.com>
    9. 调整命令行和 boot 执行后 字符的颜色；
       加入 map 命令；
       删除 defs.h dir.h disk_inode.h disk_inode_ffs.h ；
       checkkey() 和 getkey() 中加入 hlt 指令，以降低cpu使用率。
       char_io.c: 删除 grub_strncat() 等无用函数；
       disk_io.c: 删除 grub_seek() 。





2010-03-08  pt  <ptptptptptpt@163.com>
    8. char_io.c: 去掉 do_more () 函数；修改 grub_putchar () ；
       去除所有 term 相关的代码，统一为 console ； 
       增加 setcolor 命令；
       增加 find 命令；
       配置文件中可设定颜色；




2010-03-05  pt  <ptptptptptpt@163.com>
    7. 菜单改为彩色；改进菜单显示函数，选择启动项时界面不再闪烁；显示启动项细节的快捷键改为 e 。


2010-03-04  pt  <ptptptptptpt@163.com>
    6. 更改菜单界面。

2010-03-03  pt  <ptptptptptpt@163.com>
    6. 整理代码。


2010-03-02  pt  <ptptptptptpt@163.com>
    5. 改进菜单界面；选中的启动项以高亮显示；增加引导扇区 63s_grub_start 。



2010-02-28  pt  <ptptptptptpt@163.com>
    4. 改进菜单系统；去掉 disk_io.c 中 bsd 相关函数；修正 ntldr 命令的 bug 。


2010-02-27  pt  <ptptptptptpt@163.com>
    3. 增加 显示/隐藏启动项细节 的快捷键；可指定默认启动项。


2010-02-26  pt  <ptptptptptpt@163.com>
    2. 加入菜单系统。


2010-02-25  pt  <ptptptptptpt@163.com>

    0. 正式命名为 63S-GRUB ，意为 “63个扇区的GRUB” 。
    1. 不再将硬盘第63扇区作为配置文件。将“配置文件”置入 63s-grub 开头 512 字节内。


2010-02-25  pt  <ptptptptptpt@163.com>

    14. 改为按 ENTER 立即启动。
        清理changelog等。


2010-02-23  pt  <ptptptptptpt@163.com>

    12. 加入从第63扇区（前4个字节）读取倒计时时间。
    13. 加入从第63扇区（从第17字节开始到扇区结束，共496字节）读取默认启动命令。倒计时时间改为前16字节。


2010-02-11  pt  <ptptptptptpt@163.com>

    12. 清理 configure.ac


2010-02-08  pt  <ptptptptptpt@163.com>

    10. 添加 ntldr 命令
    11. 去除 apic.h；去除 iso9660 代码；
        清理代码；
        添加 build 时间；


2010-02-03  pt  <ptptptptptpt@163.com>

    9.1 删除 boot.c 、 imgact_aout.h 、 i386-elf.h ， 相应修改 makefile.am
        builtins 中去除 kernel、initrd、help 命令；去除 check_password 、disk_read_print_func 、print_root_device 函数； 修改 boot 、real_root_func 函数；